[package]
name = "objid"
version = "0.1.11"
authors = ["Niklas R. <niklasr@protonmail.com>"]
edition = "2021"
license = "MIT"
description = "Generate a random object identifier."
keywords = ["random"]
repository = "https://github.com/montao/objid"
readme = "README.md"

[dependencies]
getopts = "0.2"
rand = "0.8.4"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "montao/objid" }